fix overflow for chats

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -12,3 +12,7 @@
     display: none;
     visibility: hidden;
 }
+
+.chats::-webkit-scrollbar {
+    width: 0;
+}
